--- a/hello.html
+++ b/hello.html
@@ -4,6 +4,7 @@
         <title>selam</title>
     </head>
     <body>
-        hello world!
+        <h1>hello world!</h1>
+        <h2>welcome my world</h1>
     </body>
 </html>
