Update color h2 hello.html

--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
         <title>selam</title>
     </head>
     <body>
-        <h1>hello world!</h1>
+        <h1 style="color:blue;">hello world!</h1>
         <h2>welcome my world</h1>
     </body>
 </html>
